[package]
name = "meteora-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1"
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1", features = ["no-entrypoint"] }
spl-token-client = "0.7"
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
borsh = "0.10"
borsh-derive = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
bincode = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
once_cell = "1"
rand = "0.8"
